--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,17 +12,19 @@ services:
       POSTGRES_PASSWORD: bnexpwd
 
   backend:
-    build: /home/ubuntu/BNEXCrud/backend/Backend
-    command: python manage.py runserver 0.0.0.0:8000
+    image: python:3.11
+    command: /bin/bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - /home/ubuntu/BNEXCrud/backend/Backend:/code
     depends_on:
       - db
     environment:
       DATABASE_URL: postgres://bnex:bnexpwd@db:5432/bnexdb
+    working_dir: /code
 
   frontend:
-    build: /home/ubuntu/BNEXCrud/frontend/bnexfront
+    image: node:latest
+    command: /bin/bash -c "npm install && npm start"
     volumes:
       - /home/ubuntu/BNEXCrud/frontend/bnexfront:/app
       - /app/node_modules
@@ -32,6 +34,7 @@ services:
       - backend
     environment:
       - REACT_APP_BACKEND_URL=http://backend:8000
+    working_dir: /app
 
 volumes:
   postgres_data:
