--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_DB: bnexdb
       POSTGRES_USER: bnex
@@ -21,12 +23,14 @@ services:
     environment:
       DATABASE_URL: postgres://bnex:bnexpwd@db:5432/bnexdb
     working_dir: /code
+    ports:
+      - "8000:8000"
 
   frontend:
     image: node:latest
     command: /bin/bash -c "npm install && npm start"
     volumes:
-      - /home/ubuntu/BNEXCrud/frontend/bnexfront:/app
+      - /home/ubuntu/BNEXCrud/frontend/bnexfront:/app 
       - /app/node_modules
     ports:
       - "3000:3000" 
