--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,9 +15,9 @@ services:
 
   backend:
     image: python:3.11
-    command: /bin/bash -c "pip install -r ../requirements.txt && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: /bin/bash -c "pip install -r /code/requirements.txt && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - /home/ubuntu/BNEXCrud/backend/Backend:/code
+      - /home/ec2-user/BNEXCrud/backend/Backend:/code
     depends_on:
       - db
     environment:
@@ -30,7 +30,7 @@ services:
     image: node:latest
     command: /bin/bash -c "npm install && npm start"
     volumes:
-      - /home/ubuntu/BNEXCrud/frontend/bnexfront:/app 
+      - /home/ec2-user/BNEXCrud/frontend/bnexfront:/app 
       - /app/node_modules
     ports:
       - "3000:3000" 
