--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,12 +6,11 @@ services:
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     environment:
       POSTGRES_DB: bnexdb
       POSTGRES_USER: bnex
       POSTGRES_PASSWORD: bnexpwd
+    network_mode: "host"
 
   backend:
     image: python:3.11
@@ -21,10 +20,9 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://bnex:bnexpwd@db:5432/bnexdb
+      DATABASE_URL: postgres://bnex:bnexpwd@localhost:5432/bnexdb
     working_dir: /code
-    ports:
-      - "8000:8000"
+    network_mode: "host"
 
   frontend:
     image: node:latest
@@ -32,13 +30,12 @@ services:
     volumes:
       - /home/ec2-user/BNEXCrud/frontend/bnexfront:/app 
       - /app/node_modules
-    ports:
-      - "3000:3000" 
     depends_on:
       - backend
     environment:
-      - REACT_APP_BACKEND_URL=http://backend:8000
+      - REACT_APP_BACKEND_URL=http://localhost:8000
     working_dir: /app
+    network_mode: "host"
 
 volumes:
   postgres_data:
