try to create a superuser and connect

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,7 +14,14 @@ services:
 
   backend:
     image: python:3.11
-    command: /bin/bash -c "pip install -r /code/requirements.txt && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: >
+      /bin/bash -c "
+      pip install -r /code/requirements.txt && 
+      python manage.py makemigrations &&
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000 &&
+      echo \"from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('admin', 'admin@example.com', 'pass') if not User.objects.filter(username='admin').exists() else print('Superuser already exists.')\" | python manage.py shell
+      "
     volumes:
       - /home/ec2-user/BNEXCrud/backend/Backend:/code
     depends_on:
