--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://bnex:bnexpwd@ec2-44-204-169-176.compute-1.amazonaws.com:5432/bnexdb
+      DATABASE_URL: postgres://bnex:bnexpwd@localhost:5432/bnexdb
     working_dir: /code
     network_mode: "host"
 
@@ -40,7 +40,7 @@ services:
     depends_on:
       - backend
     environment:
-      - REACT_APP_BACKEND_URL=http://ec2-44-204-169-176.compute-1.amazonaws.com/:8000
+      REACT_APP_BACKEND_URL: "http://localhost:8000"
     working_dir: /app
     network_mode: "host"
 
