--- a/frontend/bnexfront/Dockerfile
+++ b/frontend/bnexfront/Dockerfile
@@ -1,9 +1,11 @@
-FROM node:latest
+FROM node:latest as build
 WORKDIR /app
-COPY package*.json /app/
+COPY package.json package-lock.json ./
 RUN npm install
-COPY . /app
+COPY . ./
 RUN npm run build
-RUN npm install -g serve
-EXPOSE 3000
-CMD ["serve", "-s", "build", "-l", "3000"]
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
