--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,15 +21,16 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgres://bnex:bnexpwd@db:5432/bnexdb
-
+ 
   frontend:
-    build: ../frontend/bnexfront
+    build: 
+      context: ../frontend/bnexfront
     depends_on:
       - backend
     ports:
-      - "3000:3000"
+      - "80:80"
     environment:
-      REACT_APP_BACKEND_URL: "http://backend:8000"
+      - REACT_APP_BACKEND_URL=http://backend:8000 
 
 volumes:
   postgres_data:
