Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is ahead of 'origin/main' by 1 commit.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   infra/docker-compose.yml

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - backend
     ports:
       - "3000:80"
+    env_file:
+      - ../frontend/bnexfront/.env
 
 volumes:
   postgres_data:
