Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   frontend/bnexfront/Dockerfile
	modified:   infra/docker-compose.yml

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -23,14 +23,15 @@ services:
       DATABASE_URL: postgres://bnex:bnexpwd@db:5432/bnexdb
  
   frontend:
-    build: 
-      context: ../frontend/bnexfront
+    build: ../frontend/bnexfront
+    volumes:
+      - ../frontend/bnexfront:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    environment:
+      REACT_APP_API_URL: "http://ec2-44-204-169-176.compute-1.amazonaws.com:8000"
     depends_on:
       - backend
-    ports:
-      - "3000:80"
-    env_file:
-      - ../frontend/bnexfront/.env
-
 volumes:
   postgres_data:
