--- a/frontend/bnexfront/Dockerfile
+++ b/frontend/bnexfront/Dockerfile
@@ -1,11 +1,7 @@
-FROM node:latest as build
+FROM node:latest
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 COPY . ./
-RUN npm run build
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "start"]
