--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      REACT_APP_API_URL: "http://ec2-44-204-169-176.compute-1.amazonaws.com:8000"
+      REACT_APP_API_URL: "http://ec2-44-204-169-176.compute-1.amazonaws.com"
     depends_on:
       - backend
 volumes:
